2006-05-23  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Add the 'goom' plugin from gst-plugins-good to the list of
	  required plugins for the GStreamer backend.

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_stop_play_pipeline), (setup_vis_find_factory), (setup_vis):
	  Fix visualisation factory lookup: check for short name if we
	  don't find a match with the long name (necessary because the
	  schema contains a short name). Use 'goom' as fallback if we
	  can't find the visualisation originally configured. Fixes #340506.

2006-05-22  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_new),
	(cd_cache_open_mountpoint):
	* src/plparse/totem-pl-parser.c:
	(my_gnome_vfs_get_mime_type_with_data),
	(totem_pl_parser_add_block):
	Re-add support for "parsing" block devices, look for mountpoints
	when we don't have any, change the message when not being able to find
	a mountpoint, we don't use fstab anymore (Closes: #337506)

2006-05-22  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bvw-test.c: (main): exit when the window is closed

2006-05-22  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: fix build, spotted by gpp666_999@yahoo.de
	(Closes: #342507)

2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: patch from Josh Nichols <nichoj@gentoo.org> to
	allow building with LDFLAGS="-Wl,--as-needed" (Closes: #341486)

2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* src/backend/video-utils.c: (totem_time_to_string): make the
	time labels localisable, patch from Roozbeh Pournader
	<roozbeh@farsiweb.info> (Closes: #341930)

2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-properties-view.c:
	(totem_properties_view_set_location):
	Stop lingering timeouts before resetting the view (Closes: #341626)

============ Version 1.5.1

2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 1.5.1

2006-05-16  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: